Minor changes Fixed: - uploading a pic after pasting removes the pasted one - reviews' teasers on search page showed as plain text, not html - photos-left bubble on search page not centered - review status is not setting properly, so no user likes and bookmarks are visible on reload - on narrow screen on welcome page like count and heart icon are on different lines

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -490,3 +490,7 @@ textarea {
         text-align: justify !important;
     }
 }
+
+.mw-fit-content {
+    min-width: fit-content;
+}
